[project]
name = "bioai-sdk"
version = "0.1.0"
description = "A modular SDK for building AI-powered bioinformatics tools and research pipelines."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Jan Piotrzkowski", email = "piotrzkowski.jan@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"